resources/bitwarden/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  serviceName: bitwarden
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
      - image: bitwardenrs/server
        name: bitwarden
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 3012
          name: websocket
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: data
        resources:
          limits:
            cpu: 300m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 256Mi
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "5Gi"
      storageClassName: nfs-csi
