resources/bitwarden/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  ports:
  - name: http
    port: 8080
  - name: websocket
    port: 3012
  type: ClusterIP
  selector:
    app: bitwarden
