resources/bitwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden
  labels:
    app: bitwarden
  annotations:
    cert-manager.io/cluster-issuer: addem-se-letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/config-backend: |
      option forwardfor header X-Real-IP
      http-request set-header X-Real-IP %[src]
spec:
  tls:
  - hosts:
    - bitwarden.addem.se
    secretName: bitwarden-cert
  rules:
  - host: bitwarden.addem.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bitwarden
            port:
              number: 8080
      - path: /notifications/hub
        pathType: Exact
        backend:
          service:
            name: bitwarden
            port:
              number: 3012
